# tdsql-sqlcheck

./: .dockerignore  .gitattributes  .gitignore  CONTEXT.md  Dockerfile  README.md  VERSION  _build_v1031.py  _check_raw_values.py  _fix_check_large_tables.py  _test_3_queries.py  _test_big_tables.py  _test_big_tables_detailed.py  _test_bigtable.py  _test_bigtable_api.py  _test_collection.py  _test_file_report.py  _test_partitions_direct.py  _test_sql_debug.py  _test_sql_direct.py  _test_sql_query.py  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  sit_uat_test.py  smoke_test.py  uat_test.py  walkthrough.md
backend/: cli.py  config.py  main.py  middleware.py
config/: tdsql.json.example
deploy/: README.md  env.template  install.sh  make_release.ps1  make_release.sh  nginx-sqlcheck.conf  preflight_check.sh  rollback.sh  tdsql-sqlcheck.service  tdsql_env_loader.sh  tdsql_inventory.sh  verify_deploy.sh
docs/: AI赋能DBA创新实践汇报PPT.pptx  AI赋能DBA创新实践汇报材料.md  ARCHITECTURE-v1.2.md  ARCHITECTURE.md  DEPLOYMENT.md  DETAIL-v1.2.md  Oracle规则接入验收报告.md  Oracle迁移TDSQL规范接入审核规则库设计说明书.md  TDSQL-SQL审核工具使用培训PPT.pptx  TDSQL_SQL审核工具_部署更新包交付标准建议.md  TDSQL性能诊断平台升级_概要设计文档.md  TDSQL性能诊断平台升级_详细设计说明书.md  TDSQL性能诊断平台升级设计文档评审与可行性分析报告.md  USER_GUIDE.md  V1.0.3.1增量更新部署说明.md  V1.0.3.2增量更新部署说明.md  V1.0.3.3增量更新部署说明.md  V1.0.3.4增量更新部署说明.md  V1.0.3变更清单与测试要点.md  V1.0.3更新部署指南.md  V1.0.3质检验收整改清单.md  V1.2.0.1更新部署指南.md  V1.2.0.2更新部署指南.md  V1.2.0.3更新部署指南.md  V1.2.0.4更新部署指南.md  V1.2.0.5更新部署指南.md  V1.2.0.6更新部署指南.md  V1.2.0.7更新部署指南.md  monitordb接入设计说明书评审与可行性分析报告.md  v1.0.4.0_upgrade_manual.md  (+62 more)
(+229 files in other folders)
