[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tdsql-sqlcheck"
version = "0.4.0"
description = "TDSQL SQL审核与慢SQL分析工具"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlglot>=26.0",
    "pydantic>=2.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.18",
    "pymysql>=1.1.0",
    "apscheduler>=3.10.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
